Fix jumpiness between splash screen

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -197,11 +197,12 @@ div {
 
 .column-header__category {
   margin: 0% 0% 1% 1%;
-  height: 12%;
+  height: 20%;
   border-radius: 7%;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   align-content: end;
   font-size: 23px;
   font-weight: 800;
